XP-4537 Create node/repoLib.connect
Rewrite nodehandlers to support new connect-style approach